route FB login; next is to combine for waiting only one page; to put loader

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,10 +6,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.js"></script>
 
-
-<script src='all.min.js'></script>
-
 <!--
+<script src='all.min.js'></script>
+-->
+
 <script type='text/javascript' src='app.module.js'></script>
 <script type='text/javascript' src='route.js'> </script>
 <script type='text/javascript' src='navBar.directive.js'> </script>
@@ -69,7 +69,10 @@
 <script type='text/javascript' src='preferenceSettingSu.service.js'> </script>
 <script type='text/javascript' src='preferenceSettingSuModal.controller.js'> </script>
 <script type='text/javascript' src='mainCarousel.controller.js'> </script>
--->
+
+<script type='text/javascript' src='fbLogInStatus.service.js'> </script>
+
+<script type='text/javascript' src='logInCheck.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
