--- a/public/html/errorPage.html
+++ b/public/html/errorPage.html
@@ -1,4 +1,16 @@
 <nav-bar> </nav-bar>
+
+<div class="row" style="margin-top:80px">
+
+<div class="col-sm-1"></div>
+
+<div class="col-sm-10">
+
 <h1>
   Error: {{errorMessage}}
 </h1>
+</div>
+
+<div class="col-sm-1"></div>
+
+</div>
