implement user detail view

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -69,10 +69,9 @@
 <script type='text/javascript' src='preferenceSettingSu.service.js'> </script>
 <script type='text/javascript' src='preferenceSettingSuModal.controller.js'> </script>
 <script type='text/javascript' src='mainCarousel.controller.js'> </script>
-
 <script type='text/javascript' src='fbLogInStatus.service.js'> </script>
-
 <script type='text/javascript' src='logInCheck.controller.js'> </script>
+<script type='text/javascript' src='userDetail.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
