--- a/public/html/index.html
+++ b/public/html/index.html
@@ -72,6 +72,7 @@
 <script type='text/javascript' src='fbLogInStatus.service.js'> </script>
 <script type='text/javascript' src='logInCheck.controller.js'> </script>
 <script type='text/javascript' src='userDetail.controller.js'> </script>
+<script type='text/javascript' src='userDetail.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
