implement get user detail; still need to implement async

--- a/public/html/userDetail.html
+++ b/public/html/userDetail.html
@@ -4,7 +4,10 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
-
+    <p> {{userDetail.userName}} </p>
+    <p> {{userDetail.userLevel}} </p>
+    <p> {{userDetail.userPreferTest}} </p>
+    <p> {{userDetail.userPreferSubject}} </p>
   </div>
 
   <div class="col-sm-1"></div>
