fix top ad nav bar

--- a/public/html/userDetail.html
+++ b/public/html/userDetail.html
@@ -1,13 +1,13 @@
 <nav-bar-ad></nav-bar-ad>
 
-<div class="row">
+<div class="row" style="margin-top:80px">
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
-    <p> {{userDetail.userName}} </p>
-    <p> {{userDetail.userLevel}} </p>
-    <p> {{userDetail.userPreferTest}} </p>
-    <p> {{userDetail.userPreferSubject}} </p>
+    <p> <h3>Name: {{userDetail.userName}} </h3> </p>
+    <p> <h3>Level: {{userDetail.userLevel}} </h3></p>
+    <p> <h3>Prefer test: {{userDetail.userPreferTest}} </h3></p>
+    <p> <h3>Prefer subject: {{userDetail.userPreferSubject}} </h3></p>
   </div>
 
   <div class="col-sm-1"></div>
