--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -1,6 +1,6 @@
 <nav-bar-ad></nav-bar-ad>
 
-<div class="row">
+<div class="row" style="margin-top:80px">
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
