--- a/public/html/userDetail.html
+++ b/public/html/userDetail.html
@@ -4,10 +4,30 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
-    <p> <h3>Name: {{userDetail.userName}} </h3> </p>
-    <p> <h3>Level: {{userDetail.userLevel}} </h3></p>
-    <p> <h3>Prefer test: {{userDetail.userPreferTest}} </h3></p>
-    <p> <h3>Prefer subject: {{userDetail.userPreferSubject}} </h3></p>
+    <p>
+      <h3 style='display:inline;'>Name:</h3>
+      <h4 style='display:inline;color:blue;'> {{userDetail.userName}} </h4>
+    </p>
+    <p>
+      <h3 style='display:inline;'>Level:</h3>
+      <h4 style='display:inline;color:blue;'> {{userDetail.userLevel}} </h4>
+    </p>
+    <p>
+      <h3 style='display:inline;'>Prefer test:</h3>
+      <h4 style='display:inline;color:blue;'>{{userDetail.userPreferTest}} </h4>
+    </p>
+    <p>
+      <h3 style='display:inline;'>Prefer subject:</h3>
+      <h4 style='display:inline;color:blue;'> {{userDetail.userPreferSubject}} </h4>
+    </p>
+    <p>
+      <h3 style='display:inline;'>Last login by:</h3>
+      <h4 style='display:inline;color:blue;'> {{userDetail.userLastLoginMethod}} </h4>
+    </p>
+    <p>
+      <h3 style='display:inline;'>Last login time:</h3>
+      <h4 style='display:inline;color:blue;'> {{userDetail.userLastLoginTime}} </h4>
+    </p>
   </div>
 
   <div class="col-sm-1"></div>
