add 2nd nav bar admin page; refactor get account detail

--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -19,7 +19,7 @@
           <td>{{ user.userName }}</td>
           <td>{{ user.userID }}</td>
           <td>{{ user.userRole }}</td>
-          <td><a href="#!/userDetail/{{user.userRole}}/{{user.userID}}">view</a>
+          <td><a href="#!/userAccountAdmin/{{user.userRole}}/{{user.userID}}">view</a>
         </tr>
       </tbody>
     </table>
