--- a/public/html/index.html
+++ b/public/html/index.html
@@ -71,8 +71,8 @@
 <script type='text/javascript' src='mainCarousel.controller.js'> </script>
 <script type='text/javascript' src='fbLogInStatus.service.js'> </script>
 <script type='text/javascript' src='logInCheck.controller.js'> </script>
-<script type='text/javascript' src='userDetail.controller.js'> </script>
-<script type='text/javascript' src='userDetail.service.js'> </script>
+<script type='text/javascript' src='userAccountAdmin.controller.js'> </script>
+<script type='text/javascript' src='userAccountAdmin.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
