--- a/public/html/preferenceSettingSu.html
+++ b/public/html/preferenceSettingSu.html
@@ -26,7 +26,7 @@
       </h3>
     </p>
 
-    <button type="button" class="btn btn-success" ng-click='open()'>Edit</button>
+    <button type="button" class="btn btn-success" ng-click='editPreference()'>Edit</button>
 
   </div>
 
