--- a/public/html/preferenceSettingSuModal.html
+++ b/public/html/preferenceSettingSuModal.html
@@ -23,7 +23,7 @@
 
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">Save</button>
+            <button class="btn btn-primary" type="button" ng-click="$ctrl.save()">Save</button>
             <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
         </div>
 
