refactor account admin file name; 1st login history admin

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -71,8 +71,9 @@
 <script type='text/javascript' src='mainCarousel.controller.js'> </script>
 <script type='text/javascript' src='fbLogInStatus.service.js'> </script>
 <script type='text/javascript' src='logInCheck.controller.js'> </script>
-<script type='text/javascript' src='userAccountAdmin.controller.js'> </script>
-<script type='text/javascript' src='userAccountAdmin.service.js'> </script>
+<script type='text/javascript' src='accountAdmin.controller.js'> </script>
+<script type='text/javascript' src='accountAdmin.service.js'> </script>
+<script type='text/javascript' src='loginHistory.admin.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
