--- a/public/html/loginHistory.admin.html
+++ b/public/html/loginHistory.admin.html
@@ -6,10 +6,12 @@
   <div class="col-sm-10">
 
     <ul class="nav nav-pills">
-      <li role="presentation" class="active"><a href="">Account</a></li>
+      <li role="presentation">
+        <a href="#!/userAccountAdmin/{{userAccount.userRole}}/{{userAccount.userID}}">Account</a>
+      </li>
       <li role="presentation"><a href="">Test</a></li>
       <li role="presentation"><a href="">Article</a></li>
-      <li role="presentation"><a href="">Log in history</a></li>
+      <li role="presentation" class="active"><a href="">Log in history</a></li>
     </ul>
 
 
