--- a/public/html/index.html
+++ b/public/html/index.html
@@ -71,9 +71,12 @@
 <script type='text/javascript' src='mainCarousel.controller.js'> </script>
 <script type='text/javascript' src='fbLogInStatus.service.js'> </script>
 <script type='text/javascript' src='logInCheck.controller.js'> </script>
-<script type='text/javascript' src='accountAdmin.controller.js'> </script>
-<script type='text/javascript' src='accountAdmin.service.js'> </script>
+<script type='text/javascript' src='account.admin.controller.js'> </script>
+<script type='text/javascript' src='account.admin.service.js'> </script>
+<script type='text/javascript' src='setting.admin.service.js'> </script>
+<script type='text/javascript' src='lastLogin.admin.service.js'> </script>
 <script type='text/javascript' src='loginHistory.admin.controller.js'> </script>
+<script type='text/javascript' src='loginHistory.admin.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
