--- a/public/html/loginHistory.admin.html
+++ b/public/html/loginHistory.admin.html
@@ -7,7 +7,7 @@
 
     <ul class="nav nav-pills">
       <li role="presentation">
-        <a href="#!/userAccountAdmin/{{userAccount.userRole}}/{{userAccount.userID}}">Account</a>
+        <a href="#!/accountAdmin/{{userAccount.userRole}}/{{userAccount.userID}}">Account</a>
       </li>
       <li role="presentation"><a href="">Test</a></li>
       <li role="presentation"><a href="">Article</a></li>
