add dashboard title drawing from user preference setting

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -77,6 +77,8 @@
 <script type='text/javascript' src='lastLogin.admin.service.js'> </script>
 <script type='text/javascript' src='loginHistory.admin.controller.js'> </script>
 <script type='text/javascript' src='loginHistory.admin.service.js'> </script>
+<script type='text/javascript' src='suDashboardTest.service.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
