--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -10,14 +10,14 @@
        <h3>New test</h3>
        <div class="card">
          <div class="card-block">
-           <h3 class="card-title">O-Net Math Pratom 6</h3>
+           <h3 class="card-title">{{dashboardTest1}}</h3>
            <p class="card-text">Short description</p>
            <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
          </div>
        </div>
        <div class="card">
          <div class="card-block">
-           <h3 class="card-title">O-Net Math Pratom 6</h3>
+           <h3 class="card-title">{{dashboardTest2}}</h3>
            <p class="card-text">Short description</p>
            <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
          </div>
