take the link out; need to work on aggregate exam for user preference

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -7,24 +7,24 @@
 <div class="container fluid" style="margin-top:120px">
   <div class="wrapper">
      <div class="dashboard1">
-       <h3>New test</h3>
+       <h2 style='color:blue';>New test</h2>
        <div class="card">
          <div class="card-block">
            <h3 class="card-title">{{dashboardTest1}}</h3>
            <p class="card-text">Short description</p>
-           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+           <a href="" class="btn btn-primary">Go to the test</a>
          </div>
        </div>
        <div class="card">
          <div class="card-block">
            <h3 class="card-title">{{dashboardTest2}}</h3>
            <p class="card-text">Short description</p>
-           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+           <a href="" class="btn btn-primary">Go to the test</a>
          </div>
        </div>
      </div>
      <div class="dashboard2">
-       <h3>New article</h3>
+       <h2 style='color:blue';>New article</h2>
        <div class="card">
          <div class="card-block">
            <h3 class="card-title">O-Net Math Pratom 6</h3>
