--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -7,6 +7,7 @@
 <div class="container fluid" style="margin-top:120px">
   <div class="wrapper">
      <div class="dashboard1">
+       <div style='margin-left: 10px';>
        <h2 style='color:blue';>New test</h2>
        <div class="card">
          <div class="card-block">
@@ -23,7 +24,9 @@
          </div>
        </div>
      </div>
+   </div>
      <div class="dashboard2">
+      <div style='margin-left: 10px';>
        <h2 style='color:blue';>New article</h2>
        <div class="card">
          <div class="card-block">
@@ -40,6 +43,7 @@
          </div>
        </div>
      </div>
+   </div>
      <div class="dashboard3">
        <h4>Test history</h4>
      </div>
