add nav-bar for both log in checking and log in via FB page; still need to add loader for the login checking page; still need to combine to only one page of checking and FB log in

--- a/public/html/fbLogIn.html
+++ b/public/html/fbLogIn.html
@@ -1,1 +1,11 @@
-<h1> Log in via FB account page </h1>
+<nav-bar></nav-bar>
+
+<div class="row" style="margin-top:100px">
+
+<div class="col-sm-4"></div>
+
+<div class="col-sm-4">
+<h1>Log in via FB account</h1>
+</div>
+
+<div class="col-sm-4"></div>
