--- a/public/html/logInCheck.html
+++ b/public/html/logInCheck.html
@@ -1,1 +1,10 @@
+<nav-bar></nav-bar>
+<div class="row" style="margin-top:100px">
+
+<div class="col-sm-4"></div>
+
+<div class="col-sm-4">
 <h1> log in checking... </h1>
+</div>
+
+<div class="col-sm-4"></div>
