add loader for login chek page

--- a/public/html/logInCheck.html
+++ b/public/html/logInCheck.html
@@ -1,10 +1,14 @@
 <nav-bar></nav-bar>
 <div class="row" style="margin-top:100px">
 
+<div id="loaderdiv">
+  <img src="image/loading.gif" class="ajax-loader"/>
+</div>
+
 <div class="col-sm-4"></div>
 
 <div class="col-sm-4">
-<h1> log in checking... </h1>
+<h1>log in checking...</h1>
 </div>
 
 <div class="col-sm-4"></div>
