--- a/public/html/index.html
+++ b/public/html/index.html
@@ -93,6 +93,13 @@
 
 <script type="text/javascript" src="//connect.facebook.net/en_US/sdk.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
+
+
+<script>
+  var socket = io();
+</script>
+
 <body ng-app='app'>
 
 <div id="loaderdiv" data-ng-if="loading">
