--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -2,6 +2,11 @@
 
 <div class="navbar navbar-default navbar-fixed-top second-navbar">
     <p class="navbar-text">สวัสดี {{userName}} เรามาดู Dashboard กัน</p>
+
+    <ul class="nav navbar-nav pull-right">
+      <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
+    </ul>
+
 </div>
 
 <div class="container fluid" style="margin-top:120px">
