add note nav bar menu

--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -22,6 +22,7 @@
       <li><a href="#!/dashboard/su/{{userID}}">Dashboard</a></li>
       <li><a href="#!/testList/su/{{userID}}">Test list</a></li>
       <li><a href="#!/articleList/su/{{userID}}">Article</a></li>
+      <li><a href="">Note</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
       <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
