--- a/public/html/index.html
+++ b/public/html/index.html
@@ -26,7 +26,7 @@
 <script type='text/javascript' src='testSummary.service.js'> </script>
 <script type='text/javascript' src='reviewUnSubscribeTest.service.js'> </script>
 <script type='text/javascript' src='dashboard.controller.js'> </script>
-<script type='text/javascript' src='dashboard.su.service.js'> </script>
+<script type='text/javascript' src='suAccountData.service.js'> </script>
 <script type='text/javascript' src='dashboard.pu.service.js'> </script>
 <script type='text/javascript' src='logOut.controller.js'> </script>
 <script type='text/javascript' src='loadingInterceptor.service.js'> </script>
