add 2nd nav bar for su test list page

--- a/public/html/testListSu.html
+++ b/public/html/testListSu.html
@@ -1,5 +1,14 @@
 <nav-bar-su></nav-bar-su>
 
+<div class="navbar navbar-default navbar-fixed-top second-navbar">
+    <p class="navbar-text">สวัสดี {{userName}} เรามาดู Test list กัน</p>
+
+    <ul class="nav navbar-nav pull-right">
+      <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
+    </ul>
+
+</div>
+
 <div class="col-sm-1"></div>
 
 <div class="col-sm-10">
