rename su test list related file

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -62,7 +62,7 @@
 <script type='text/javascript' src='profileSettingSu.controller.js'> </script>
 <script type='text/javascript' src='profileSettingSu.service.js'> </script>
 <script type='text/javascript' src='accountSettingSu.controller.js'> </script>
-<script type='text/javascript' src='testListSu.controller.js'> </script>
+<script type='text/javascript' src='suTestList.controller.js'> </script>
 <script type='text/javascript' src='articleListSu.controller.js'> </script>
 <script type='text/javascript' src='fbLogIn.controller.js'> </script>
 <script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
