--- a/public/html/suTestList.html
+++ b/public/html/suTestList.html
@@ -9,10 +9,36 @@
 
 </div>
 
-<div class="col-sm-1"></div>
+<div class="row" style="margin-top:120px">
 
-<div class="col-sm-10">
+<div class="col-sm-2"></div>
+
+<div class="col-sm-8">
+  <p><h1 style='color:blue';>New test</h1></p>
+  <p>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-block">
+          <h3 class="card-title">O-Net Math Pratom 6</h3>
+          <p class="card-text">Short description</p>
+          <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-block">
+          <h3 class="card-title">O-Net Math Pratom 6</h3>
+          <p class="card-text">Short description</p>
+          <a href="#!unSubscribeTestMain/ONET-P6-Math-0002" class="btn btn-primary">Go to the test</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </p>
+</div>
 
 </div>
 
-<div class="col-sm-1"></div>
+<div class="col-sm-2"></div>
