--- a/public/html/suTestList.html
+++ b/public/html/suTestList.html
@@ -20,18 +20,18 @@
     <div class="col-sm-6">
       <div class="card">
         <div class="card-block">
-          <h3 class="card-title">O-Net Math Pratom 6</h3>
+          <h3 class="card-title">{{dashboardTest1}}</h3>
           <p class="card-text">Short description</p>
-          <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+          <a href="" class="btn btn-primary">Go to the test</a>
         </div>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="card">
         <div class="card-block">
-          <h3 class="card-title">O-Net Math Pratom 6</h3>
+          <h3 class="card-title">{{dashboardTest2}}</h3>
           <p class="card-text">Short description</p>
-          <a href="#!unSubscribeTestMain/ONET-P6-Math-0002" class="btn btn-primary">Go to the test</a>
+          <a href="" class="btn btn-primary">Go to the test</a>
         </div>
       </div>
     </div>
