add su new test route and controller

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -17,14 +17,14 @@
        <div class="card">
          <div class="card-block">
            <h3 class="card-title">{{dashboardTest1}}</h3>
-           <p class="card-text">Short description</p>
-           <a href="" class="btn btn-primary">Go to the test</a>
+           <p class="card-text">Short description / test header</p>
+           <a href="#!/newTest/su/{{dashboardTest1}}" class="btn btn-primary">Go to the test</a>
          </div>
        </div>
        <div class="card">
          <div class="card-block">
            <h3 class="card-title">{{dashboardTest2}}</h3>
-           <p class="card-text">Short description</p>
+           <p class="card-text">Short description / test header</p>
            <a href="" class="btn btn-primary">Go to the test</a>
          </div>
        </div>
