--- a/public/html/index.html
+++ b/public/html/index.html
@@ -78,6 +78,7 @@
 <script type='text/javascript' src='loginHistory.admin.controller.js'> </script>
 <script type='text/javascript' src='loginHistory.admin.service.js'> </script>
 <script type='text/javascript' src='suDashboardTest.service.js'> </script>
+<script type='text/javascript' src='suNewTest.controller.js'> </script>
 
 
 <!-- bootstrap3 -->
