implement su new test service and controller

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -79,6 +79,7 @@
 <script type='text/javascript' src='loginHistory.admin.service.js'> </script>
 <script type='text/javascript' src='suDashboardTest.service.js'> </script>
 <script type='text/javascript' src='suNewTest.controller.js'> </script>
+<script type='text/javascript' src='suNewTestInfo.service.js'> </script>
 
 
 <!-- bootstrap3 -->
