--- a/public/html/suNewtest.html
+++ b/public/html/suNewtest.html
@@ -1,10 +1,48 @@
 <nav-bar-su></nav-bar-su>
 
 <div class="navbar navbar-default navbar-fixed-top second-navbar">
-    <p class="navbar-text"></p>
+    <p class="navbar-text">New test</p>
 
     <ul class="nav navbar-nav pull-right">
       <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
     </ul>
+</div>
+
+<div class="row" style="margin-top:120px">
+
+<div class="col-sm-2"></div>
+
+<div class="col-sm-8">
+
+<h1>{{testID}}</h1>
+
+<h2>{{testDescription}}</h2>
+
+<h2>{{instruction}}</h2>
+
+<p>
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-block">
+        <h3 class="Tutorial mode">Tutorial mode</h3>
+        <button class="btn btn-primary" ng-click='startTestTutorialMode()'>Start</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-block">
+        <h3 class="card-title">Exam mode</h3>
+        <button class="btn btn-primary" ng-click='startTestExamMode()'>Start</button>
+      </div>
+    </div>
+  </div>
+</div>
+</p>
+
+</div>
+
+<div class="col-sm-2"></div>
 
 </div>
