--- a/public/html/index.html
+++ b/public/html/index.html
@@ -78,9 +78,10 @@
 <script type='text/javascript' src='loginHistory.admin.controller.js'> </script>
 <script type='text/javascript' src='loginHistory.admin.service.js'> </script>
 <script type='text/javascript' src='suDashboardTest.service.js'> </script>
+
 <script type='text/javascript' src='suNewTest.controller.js'> </script>
 <script type='text/javascript' src='suNewTestInfo.service.js'> </script>
-
+<script type='text/javascript' src='suNewTestHeader.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
