--- a/public/html/suNewtest.html
+++ b/public/html/suNewtest.html
@@ -1,7 +1,7 @@
 <nav-bar-su></nav-bar-su>
 
 <div class="navbar navbar-default navbar-fixed-top second-navbar">
-    <p class="navbar-text">New test</p>
+    <p class="navbar-text">New test {{testID}}</p>
 
     <ul class="nav navbar-nav pull-right">
       <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
