implement su new test page to have test ID + running number, test desciption; still need to organize better DB collections to save time on pulling data

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -18,7 +18,7 @@
          <div class="card-block">
            <h3 class="card-title">{{dashboardTest1}}</h3>
            <p class="card-text">Short description / test header</p>
-           <a href="#!/suNewTest/{{userID}}/{{dashboardTest1}}" class="btn btn-primary">Go to the test</a>
+           <a href="#!/suNewTest/{{userID}}/{{newTestID}}/{{testRunningNumber01}}" class="btn btn-primary">Go to the test</a>
          </div>
        </div>
        <div class="card">
