start implement su test tutorial mode

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -83,6 +83,8 @@
 <script type='text/javascript' src='suNewTestInfo.service.js'> </script>
 <script type='text/javascript' src='suNewTestHeader.service.js'> </script>
 
+<script type='text/javascript' src='suTestTutorialMode.controller.js'> </script>
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
