now can retrieve su test question and answer choice

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -84,6 +84,7 @@
 <script type='text/javascript' src='suNewTestHeader.service.js'> </script>
 
 <script type='text/javascript' src='suTestTutorialMode.controller.js'> </script>
+<script type='text/javascript' src='suTestQuestion.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
