refactor to separate testID and suTestID

--- a/public/html/suNewtest.html
+++ b/public/html/suNewtest.html
@@ -1,7 +1,7 @@
 <nav-bar-su></nav-bar-su>
 
 <div class="navbar navbar-default navbar-fixed-top second-navbar">
-    <p class="navbar-text">New test {{testID}}</p>
+    <p class="navbar-text">New test {{suTestID}}</p>
 
     <ul class="nav navbar-nav pull-right">
       <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
@@ -14,7 +14,7 @@
 
 <div class="col-sm-8">
 
-<h1 style='color:blue';>{{testID}}</h1>
+<h1 style='color:blue';>{{suTestID}}</h1>
 
 <h2>{{testDescription}}</h2>
 
