--- a/public/html/suTestTutorialMode.html
+++ b/public/html/suTestTutorialMode.html
@@ -16,7 +16,7 @@
   <div class="col-sm-10">
 
     <h2>
-      Question: {{questionNumber}} of {{numberOfQuestion}}
+      Question: {{suTestQuestionNumber}} of {{suTestSize}}
     </h2>
 
     <h3>
