implement record in suTestHistory

--- a/public/html/suTestTutorialMode.html
+++ b/public/html/suTestTutorialMode.html
@@ -39,7 +39,7 @@
       <div class="col-sm-6">
         <input ng-show="isSubmitted()" type="submit"  class="btn btn-primary" id="submit" value="Submit answer" />
         <button ng-show="isNext()" type="button" class="btn btn-success" ng-click="nextQuestion()">Next question</button>
-        <button ng-show="isTestFinished()" type="button" class="btn btn-info" ng-click="showTestSummary()">Test is finished. Go to Test summary</button>
+        <button ng-show="isTestFinished()" type="button" class="btn btn-info" ng-click="suTestSummary()">Test is finished. Go to Test summary</button>
       </div>
     </form>
 
