--- a/public/html/index.html
+++ b/public/html/index.html
@@ -86,6 +86,9 @@
 <script type='text/javascript' src='suTestTutorialMode.controller.js'> </script>
 <script type='text/javascript' src='suTestQuestion.service.js'> </script>
 
+<script type='text/javascript' src='suTestSummary.controller.js'> </script>
+
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
