implement su test summary page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -87,6 +87,8 @@
 <script type='text/javascript' src='suTestQuestion.service.js'> </script>
 
 <script type='text/javascript' src='suTestSummary.controller.js'> </script>
+<script type='text/javascript' src='suTestSummary.service.js'> </script>
+<script type='text/javascript' src='suTestScore.service.js'> </script>
 
 
 <!-- bootstrap3 -->
