--- a/public/html/suTestSummary.html
+++ b/public/html/suTestSummary.html
@@ -1,7 +1,7 @@
 <nav-bar-su></nav-bar-su>
 
 <div class="navbar navbar-default navbar-fixed-top second-navbar">
-    <p class="navbar-text">Test summary {{suTestID}}</p>
+    <p class="navbar-text">Test summary {{suTestID}}, {{suTestMode}} mode, taken at {{suTestStartAt}}</p>
 
     <ul class="nav navbar-nav pull-right">
       <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
@@ -9,6 +9,36 @@
 </div>
 
 <div class="row" style="margin-top:120px">
+
+    <div class="col-sm-1"></div>
+
+    <div class="col-sm-10">
+
+  <h1>Test Summary</h1>
+  <h2>Score: {{score}}</h2>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+    <th><h3 style='text-align:center';>Question number</h3></th>
+    <th><h3 style='text-align:center';>Your answer</h3></th>
+    <th><h3 style='text-align:center';>Result</h3></th>
+    <th><h3>Review</h3></th>
+      </tr>
+    </thead>
+        <tbody>
+          <tr ng-repeat="res in result">
+            <td style='text-align:center';> {{res.suTestQuestionNumber}}</td>
+            <td style='text-align:center';> {{res.suTestAnswer}}</td>
+            <td style='text-align:center';> {{res.suTestResult}}</td>
+            <td><a ng-href=""> Review solution </a></td>
+          </tr>
+        </tbody>
+  </table>
+
+  </div>
+
+    <div class="col-sm-1"></div>
+
 
 
 
