--- a/public/html/suTestSummary.html
+++ b/public/html/suTestSummary.html
@@ -15,7 +15,7 @@
     <div class="col-sm-10">
 
   <h1>Test Summary</h1>
-  <h2>Score: {{score}}</h2>
+  <h2>Score: {{suTestScore}}</h2>
   <table class="table table-striped table-hover">
     <thead>
       <tr>
