1st implement su test review

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -89,6 +89,8 @@
 <script type='text/javascript' src='suTestSummary.controller.js'> </script>
 <script type='text/javascript' src='suTestSummary.service.js'> </script>
 <script type='text/javascript' src='suTestScore.service.js'> </script>
+<script type='text/javascript' src='suTestReview.controller.js'> </script>
+<script type='text/javascript' src='suTestReview.service.js'> </script>
 
 
 <!-- bootstrap3 -->
