--- a/public/html/suTestSummary.html
+++ b/public/html/suTestSummary.html
@@ -30,7 +30,7 @@
             <td style='text-align:center';> {{res.suTestQuestionNumber}}</td>
             <td style='text-align:center';> {{res.suTestAnswer}}</td>
             <td style='text-align:center';> {{res.suTestResult}}</td>
-            <td><a ng-href=""> Review solution </a></td>
+            <td><a ng-href="#!/suTestReview/{{res.userID}}/{{res.suTestID}}/{{res.suTestQuestionNumber}}"> Review solution </a></td>
           </tr>
         </tbody>
   </table>
