--- a/public/html/navBar.html
+++ b/public/html/navBar.html
@@ -31,6 +31,11 @@
                   <li><a href="">About us</a></li>
                   <li><a href="">Contact us</a></li>
                   <li><a href="">Share us</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                  <li><a href="">Page 1-3</a></li>
                 </ul>
       </li>
     </ul>
