--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -23,6 +23,21 @@
       <li><a href="#!/testList/su/{{userID}}">Test list</a></li>
       <li><a href="#!/articleList/su/{{userID}}">Article</a></li>
       <li><a href="">Note</a></li>
+
+      <li class="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
+                <ul class="dropdown-menu" id="su-more-dropdown">
+                  <li><a href="">About us</a></li>
+                  <li><a href="">Contact us</a></li>
+                  <li><a href="">Share us</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                  <li><a href="">Page 1-3</a></li>
+                </ul>
+      </li>
+
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
       <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
