--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -26,7 +26,7 @@
 
       <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
-                <ul class="dropdown-menu" id="su-more-dropdown">
+                <ul class="dropdown-menu" id="su-2ndNavBarMore-dropdown">
                   <li><a href="">About us</a></li>
                   <li><a href="">Contact us</a></li>
                   <li><a href="">Share us</a></li>
