--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -4,23 +4,7 @@
     <p class="navbar-text">สวัสดี {{userName}} เรามาดู Dashboard กัน</p>
 
     <ul class="nav navbar-nav pull-right">
-
-
-      <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="">About us</a></li>
-                  <li><a href="">Contact us</a></li>
-                  <li><a href="">Share us</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                </ul>
-      </li>
-
-
+      <li><a href=""><img src="image/note-icon.jpg" style="width:25px;height:25px;border:0;"></a></li>
       <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
     </ul>
 
