--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -23,18 +23,17 @@
       <li><a href="#!/testList/su/{{userID}}">Test list</a></li>
       <li><a href="#!/articleList/su/{{userID}}">Article</a></li>
       <li><a href="">Note</a></li>
-
+      <li><a href="#!/profileSetting/su/{{userID}}"><span class="glyphicon glyphicon-cog"></span>Setting</a></li>
       <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
                 <ul class="dropdown-menu" id="su-2ndNavBarMore-dropdown">
+                  <li><a href="">Test history</a></li>
+                  <li><a href="">Article archive</a></li>
+                  <li class="divider"></li>
                   <li><a href="">About us</a></li>
                   <li><a href="">Contact us</a></li>
-                  <li><a href="">Share us</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                  <li><a href="">Page 1-3</a></li>
-                  <li><a href="">Page 1-3</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#!logOut"><span class="glyphicon glyphicon-log-out"></span>Log out</a></li>
                 </ul>
       </li>
 
@@ -44,8 +43,7 @@
       <li><a href="#!logIn"><span class="glyphicon glyphicon-log-in"></span>Log in</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='isLogIn()'>
-      <li><a href="#!/profileSetting/su/{{userID}}"><span class="glyphicon glyphicon-cog"></span>Setting</a></li>
-      <li><a href="#!logOut"><span class="glyphicon glyphicon-log-out"></span>Log out</a></li>
+      <li><a href="#!/profileSetting/su/{{userID}}"><span class=""></span>Share us with friends</a></li>
     </ul>
   </div>
 </div>
