--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -43,7 +43,7 @@
       <li><a href="#!logIn"><span class="glyphicon glyphicon-log-in"></span>Log in</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='isLogIn()'>
-      <li><a href="#!/profileSetting/su/{{userID}}"><span class=""></span>Share us with friends</a></li>
+      <li><a href=""><span class=""></span>Share us with friends</a></li>
     </ul>
   </div>
 </div>
