--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -38,14 +38,14 @@
          <div class="card-block">
            <h3 class="card-title">O-Net Math Pratom 6</h3>
            <p class="card-text">Short description</p>
-           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the aritcle</a>
          </div>
        </div>
        <div class="card">
          <div class="card-block">
            <h3 class="card-title">O-Net Math Pratom 6</h3>
            <p class="card-text">Short description</p>
-           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the article</a>
          </div>
        </div>
      </div>
