--- a/public/html/index.html
+++ b/public/html/index.html
@@ -92,6 +92,8 @@
 <script type='text/javascript' src='suTestReview.controller.js'> </script>
 <script type='text/javascript' src='suTestReview.service.js'> </script>
 
+<script type='text/javascript' src='secondNavBar.su.controller.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
