try positioning panels

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -13,13 +13,13 @@
 
 
   <!-- note panel -->
-  <div class="panel panel-default" style="margin-top:220px" id='notePanel' ng-show='showNotePanel'>
+  <div class="panel panel-default" id='notePanel' ng-show='showNotePanel'>
     <div class="panel-heading">Note panel</div>
     <div class="panel-body">Test note panel</div>
   </div>
 
   <!-- chat panel -->
-  <div class="panel panel-default" style="margin-top:180px" id='chatPanel' ng-show='showChatPanel'>
+  <div class="panel panel-default" id='chatPanel' ng-show='showChatPanel'>
     <div class="panel-heading">Chat panel</div>
     <div class="panel-body">Test chat panel</div>
   </div>
