add text area for note panel

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -14,8 +14,8 @@
 
   <!-- note panel -->
   <div class="panel panel-default" id='notePanel' ng-show='showNotePanel'>
-    <div class="panel-heading">Note panel</div>
-    <div class="panel-body">Test note panel</div>
+    <label for="note">Note</label>
+    <textarea class="form-control" rows='10' column='50' id='note'></textarea>
   </div>
 
   <!-- chat panel -->
