--- a/public/html/index.html
+++ b/public/html/index.html
@@ -93,6 +93,10 @@
 <script type='text/javascript' src='suTestReview.service.js'> </script>
 
 
+<script type='text/javascript' src='suTestExamMode.controller.js'> </script>
+
+
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
