--- a/public/html/suTestExamMode.html
+++ b/public/html/suTestExamMode.html
@@ -44,7 +44,7 @@
 
     <div class="col-sm-10">
       <h2>
-        Question: {{questionNo}}
+        Question: {{suTestQuestionNumber}} of {{suTestSize}}
       </h2>
 
       <h3>
