implement su test exam mode submit answer; 1st implement su test exam mode answer sheet summary

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -92,10 +92,8 @@
 <script type='text/javascript' src='suTestReview.controller.js'> </script>
 <script type='text/javascript' src='suTestReview.service.js'> </script>
 
-
 <script type='text/javascript' src='suTestExamMode.controller.js'> </script>
-
-
+<script type='text/javascript' src='suTestExamModeAnswerSummary.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
