implement answer sheet summary su test exam mode

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -94,6 +94,7 @@
 
 <script type='text/javascript' src='suTestExamMode.controller.js'> </script>
 <script type='text/javascript' src='suTestExamModeAnswerSummary.controller.js'> </script>
+<script type='text/javascript' src='suTestExamModeAnswerSummary.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
