--- a/public/html/suTestExamModeAnswerSummary.html
+++ b/public/html/suTestExamModeAnswerSummary.html
@@ -1,7 +1,7 @@
 <nav-bar-su></nav-bar-su>
 
 <div class="navbar navbar-default navbar-fixed-top second-navbar">
-    <p class="navbar-text">{{testID}} exam mode answer summary</p>
+    <p class="navbar-text">{{suTestID}} exam mode answer summary</p>
 
     <ul class="nav navbar-nav pull-right">
       <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
@@ -27,19 +27,14 @@
     <tr>
   <th>Question number</th>
   <th>Status</th>
-  <th>Answer</th>
-  <th>Review</th>
+  <th>Your answer</th>
     </tr>
   </thead>
       <tbody>
         <tr ng-repeat="res in result">
-          <td>{{ res.questionNumber }}</td>
-          <td>{{ res.status }}</td>
-          <td>{{ res.userAnswer }}</td>
-          <td><a ng-href="#!/reviseExamAnswerSheet/{{res.userID}}/{{res.testMode}}/{{res.testStartAt}}/{{res.testID}}/{{res.questionNumber}}">Revise answer</a></td>
-          <!-- :userID/:testID/:testMode/:testStartAt -->
-          <!-- /reviseExamAnswer/xxx/xxx/xxx -->
-          <!-- use the same exam question route but have user answer in -->
+          <td>{{ res.suTestQuestionNumber }}</td>
+          <td>{{ res.suTestQuestionStatus }}</td>
+          <td>{{ res.suTestAnswer }}</td>
         </tr>
       </tbody>
 </table>
