--- a/public/html/index.html
+++ b/public/html/index.html
@@ -96,6 +96,9 @@
 <script type='text/javascript' src='suTestExamModeAnswerSummary.controller.js'> </script>
 <script type='text/javascript' src='suTestExamModeAnswerSummary.service.js'> </script>
 
+<script type='text/javascript' src='reviseSuTestExamAnswerSheet.controller.js'> </script>
+<script type='text/javascript' src='reviseSuTestExamAnswerSheet.service.js'> </script>
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
