get the suTest exam question to revise

--- a/public/html/reviseSuTestExamAnswerSheet.html
+++ b/public/html/reviseSuTestExamAnswerSheet.html
@@ -1,7 +1,7 @@
 <nav-bar-su></nav-bar-su>
 
 <div class="navbar navbar-default navbar-fixed-top second-navbar">
-    <p class="navbar-text">New test {{testID}} exam mode</p>
+    <p class="navbar-text">Revise answer {{suTestID}} exam mode</p>
 
     <ul class="nav navbar-nav pull-right">
       <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
@@ -43,7 +43,7 @@
 
     <div class="col-sm-10">
       <h2>
-        Question: {{questionNumber}}
+        Question: {{suTestQuestionNumber}} of {{suTestSize}}
       </h2>
 
       <h3>
