1st implement on registor suTestHistory tutorial mode

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -101,6 +101,8 @@
 
 <script type='text/javascript' src='secondNavBar.su.controller.js'> </script>
 
+<script type='text/javascript' src='suTestHistory.service.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
