1st implement su test history route, view and controller

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -101,6 +101,7 @@
 
 <script type='text/javascript' src='secondNavBar.su.controller.js'> </script>
 
+<script type='text/javascript' src='suTestHistory.controller.js'> </script>
 <script type='text/javascript' src='suTestHistory.service.js'> </script>
 
 
