--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -27,7 +27,7 @@
       <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
                 <ul class="dropdown-menu" id="su-2ndNavBarMore-dropdown">
-                  <li><a href="">Test history</a></li>
+                  <li><a href="#!/suTestHistory/{{userID}}">Test history</a></li>
                   <li><a href="">Article archive</a></li>
                   <li class="divider"></li>
                   <li><a href="">About us</a></li>
