--- a/public/html/suTestHistory.html
+++ b/public/html/suTestHistory.html
@@ -19,6 +19,26 @@
 
   <div class="col-sm-10">
 
+      <h1>Test history</h1>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+        <th><h3 style='text-align:center';>Test ID</h3></th>
+        <th><h3 style='text-align:center';>Test mode</h3></th>
+        <th><h3 style='text-align:center';>Taken on</h3></th>
+        <th><h3>Review</h3></th>
+          </tr>
+        </thead>
+            <tbody>
+              <tr ng-repeat="his in testHistory">
+                <td style='text-align:center';>{{his.suTestID}}</td>
+                <td style='text-align:center';>{{his.suTestMode}}</td>
+                <td style='text-align:center';>{{his.testDate}}</td>
+                <td><a ng-href="#!/suTestSummary/{{his.userID}}/{{his.suTestID}}/{{his.suTestMode}}/{{his.suTestStartAt}}">Review</a></td>
+              </tr>
+            </tbody>
+      </table>
+
   </div>
 
   <div class="col-sm-1"></div>
