--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -8,10 +8,7 @@
         <li><a href="" ng-click="openNotePanel()"><img src="image/note-icon.jpg" style="width:25px;height:25px;border:0;"></a></li>
         <li><a href="" ng-click="openChatPanel()"><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
       </ul>
-
   </div>
-</div>
-
 
   <!-- note panel -->
   <div class="panel panel-default" id='notePanel' ng-show='showNotePanel'>
@@ -25,7 +22,7 @@
     <div class="panel-body">Test chat panel</div>
   </div>
 
-</div>
+</div> <!--ng-controller='secondNavBarSuCtrl'-->
 
 <div class="container fluid" style="margin-top:120px">
   <div class="wrapper">
