1st implement suGenerateNewTest service

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -104,6 +104,8 @@
 <script type='text/javascript' src='suTestHistory.controller.js'> </script>
 <script type='text/javascript' src='suTestHistory.service.js'> </script>
 
+<script type='text/javascript' src='suGenerateNewTest.service.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
