fix update new suTestID and name on the dashboard; next is to fix the auto generate test question

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -33,14 +33,14 @@
          <div class="card-block">
            <h3 class="card-title">{{dashboardTest1}}</h3>
            <p class="card-text">Short description / test header</p>
-           <a href="#!/suNewTest/{{userID}}/{{newTestID}}/{{testRunningNumber01}}" class="btn btn-primary">Go to the test</a>
+           <a href="#!/suNewTest/{{userID}}/{{testID1}}/{{testRunningNumber1}}" class="btn btn-primary">Go to the test</a>
          </div>
        </div>
        <div class="card">
          <div class="card-block">
            <h3 class="card-title">{{dashboardTest2}}</h3>
            <p class="card-text">Short description / test header</p>
-           <a href="" class="btn btn-primary">Go to the test</a>
+           <a href="#!/suNewTest/{{userID}}/{{testID2}}/{{testRunningNumber2}}" class="btn btn-primary">Go to the test</a>
          </div>
        </div>
      </div>
