refactor generate new suTestID service

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -104,7 +104,7 @@
 <script type='text/javascript' src='suTestHistory.controller.js'> </script>
 <script type='text/javascript' src='suTestHistory.service.js'> </script>
 
-<script type='text/javascript' src='suGenerateNewTest.service.js'> </script>
+<script type='text/javascript' src='newSuTestID.service.js'> </script>
 
 
 <!-- bootstrap3 -->
