adjust the chat box with css

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -20,6 +20,9 @@
   <div class="panel panel-default" id='chatPanel' ng-show='showChatPanel'>
     <div class="panel-heading">Chat panel</div>
     <div class="panel-body">Test chat panel</div>
+    <form action="">
+      <input id="chatPanel-message" autocomplete="off" /><button>Send</button>
+    </form>
   </div>
 
 </div> <!--ng-controller='secondNavBarSuCtrl'-->
