1st implement generate new su test

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -106,6 +106,8 @@
 
 <script type='text/javascript' src='newSuTestID.service.js'> </script>
 
+<script type='text/javascript' src='suNewTest.service.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
