refactor new su test and rename new su test to be more meaningful; still need to refactor the all su test file name to be consistent and meaningful

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -106,7 +106,7 @@
 
 <script type='text/javascript' src='newSuTestID.service.js'> </script>
 
-<script type='text/javascript' src='suNewTest.service.js'> </script>
+<script type='text/javascript' src='newSuTest.service.js'> </script>
 
 
 <!-- bootstrap3 -->
