--- a/public/html/signUp.html
+++ b/public/html/signUp.html
@@ -1,4 +1,6 @@
 <nav-bar></nav-bar>
+
+<div class="container fluid" style="margin-top:80px">
 <div class="col-sm-4"></div>
 
 <div class="col-sm-4">
@@ -23,6 +25,8 @@
 </div>
 
 <div class="col-sm-4"></div>
+
+</div>
 
 <!--
 <div class="form-group">
