fix first seeting for the new user

--- a/public/html/firstSettingSu.html
+++ b/public/html/firstSettingSu.html
@@ -1,5 +1,9 @@
 <nav-bar-su></nav-bar-su>
 
+<!-- to add 2nd nav bar directive here -->
+
+<div class="container fluid" style="margin-top:120px">
+
 <div class="col-sm-1"></div>
 
 <div class="col-sm-10">
@@ -32,3 +36,5 @@
 </div>
 
 <div class="col-sm-1"></div>
+
+</div>
