implement retake exam function

--- a/public/html/suTestSummary.html
+++ b/public/html/suTestSummary.html
@@ -22,7 +22,7 @@
           </div>
           <div class="col-sm-4">
             <br>
-            <button class="btn btn-primary" ng-click=''>Retake the test</button>
+            <button class="btn btn-primary" ng-click='retakeTest()'>Retake the test</button>
           </div>
         </div>
       </div>
