create 2nd su nav bar directive; still need to make it to apply to other route view

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -108,6 +108,8 @@
 
 <script type='text/javascript' src='newSuTest.service.js'> </script>
 
+<script type='text/javascript' src='secondNavBar.su.directive.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
