--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -1,5 +1,8 @@
 <nav-bar-su></nav-bar-su>
 
+<second-nav-bar-su></second-nav-bar-su>
+
+<!--
 <div ng-controller='secondNavBarSuCtrl'>
   <div class="navbar navbar-default navbar-fixed-top second-navbar" id="su-2nd-nav-bar">
       <p class="navbar-text">สวัสดี {{userName}} เรามาดู Dashboard กัน</p>
@@ -11,12 +14,14 @@
   </div>
 
   <!-- note panel -->
+  <!--
   <div class="panel panel-default" id='notePanel' ng-show='showNotePanel'>
     <label for="note">Note</label>
     <textarea class="form-control" rows='10' column='50' id='note'></textarea>
   </div>
 
   <!-- chat panel -->
+  <!--
   <div class="panel panel-default" id='chatPanel' ng-show='showChatPanel'>
     <div class="panel-heading">Chat panel</div>
     <div class="panel-body">Test chat panel</div>
@@ -24,8 +29,8 @@
       <input id="chatPanel-message" autocomplete="off" /><button>Send</button>
     </form>
   </div>
-
 </div> <!--ng-controller='secondNavBarSuCtrl'-->
+
 
 <div class="container fluid" style="margin-top:120px">
   <div class="wrapper">
