implement app/suSecondNavBarMessage.service.js, $rootScope.suSecondNavBarMessage for suSecondNavbar message

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -111,6 +111,7 @@
 
 <script type='text/javascript' src='socket.service.js'> </script>
 
+<script type='text/javascript' src='suSecondNavBarMessage.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
