--- a/public/html/suTestHistory.html
+++ b/public/html/suTestHistory.html
@@ -2,7 +2,7 @@
 
 <div ng-controller='secondNavBarSuCtrl'>
   <div class="navbar navbar-default navbar-fixed-top second-navbar" id="su-2nd-nav-bar">
-      <p class="navbar-text">สวัสดี {{userName}} เรามาดู Test history กัน</p>
+      <p class="navbar-text">{{suSecondNavBarMessage}}</p>
 
       <ul class="nav navbar-nav pull-right">
         <li><a href="" ng-click="openNotePanel()"><img src="image/note-icon.jpg" style="width:25px;height:25px;border:0;"></a></li>
