--- a/public/html/suTestHistory.html
+++ b/public/html/suTestHistory.html
@@ -1,19 +1,8 @@
 <nav-bar-su></nav-bar-su>
 
-<div ng-controller='secondNavBarSuCtrl'>
-  <div class="navbar navbar-default navbar-fixed-top second-navbar" id="su-2nd-nav-bar">
-      <p class="navbar-text">{{suSecondNavBarMessage}}</p>
-
-      <ul class="nav navbar-nav pull-right">
-        <li><a href="" ng-click="openNotePanel()"><img src="image/note-icon.jpg" style="width:25px;height:25px;border:0;"></a></li>
-        <li><a href="" ng-click="openChatPanel()"><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
-      </ul>
-
-  </div>
-</div>
+<second-nav-bar-su></second-nav-bar-su>
 
 <div class="row" style="margin-top:120px">
-
 
   <div class="col-sm-1"></div>
 
