--- a/public/html/secondNavBar.su.html
+++ b/public/html/secondNavBar.su.html
@@ -21,7 +21,7 @@
       <div class="panel-body">Test chat panel</div>
       <form id="chatPanel-message" ng-submit='sendMessage()'>
         <input type='text' ng-model='message' size='38' autofocus></input>
-        <button type='submit' class='btn btn-success'>Send</button>
+        <!-- <button type='submit' class='btn btn-success'>Send</button> -->
       </form>
     </div>
   </div> <!--ng-controller='secondNavBarSuCtrl'-->
